<resources>
    <string name="app_name">Lab Exam Practice Tute5</string>
    
    <string name="tvTitle">Register Student</string>
    <string name="edtStudentId">Enter Student ID</string>
    <string name="tvYear">Select Academic Year</string>
    <string name="tvSemester">Select the Semester</string>
    <string name="btnSubmit">Submit</string>
    <string name="btnCancel">Cancel</string>
    <string name="cbAgreement">I agree to terms and conditions</string>

    <string-array name="Years">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="Semesters">
        <item></item>
        <item>Semester 1</item>
        <item>Semester 2</item>
    </string-array>

</resources>