<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_margin="16dp"
    >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tvTitle"
        android:textAlignment="center"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/edtStudentId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/edtStudentId"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvYear"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        />

    <Spinner
        android:id="@+id/Years"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/Years"
        android:layout_marginTop="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        />

    <TextView
        android:id="@+id/tvSemester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvSemester"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        />

    <Spinner
        android:id="@+id/Semesters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/Semesters"
        android:layout_marginTop="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        />

    <CheckBox
        android:id="@+id/cbAgreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cbAgreement"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="submit"
        android:text="@string/btnSubmit"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCancel"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        />

</LinearLayout>